DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Apr-29-2007 patrick     Renamed the x11_pipes property of the display_system
                        config element to pipes.
                        NEW VERSION: 1.3.2
Apr-28-2007 patrick     Changed clustering to be single-threaded.
                        NEW VERSION: 1.3.1
Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                        NEW VERSION: 1.3.0