@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-30-2007 aronb       Started revamping the cluster infastructure.
+                        NEW VERSION: 1.3.3
 Apr-29-2007 patrick     Renamed the x11_pipes property of the display_system
                         config element to pipes.
                         NEW VERSION: 1.3.2
